# read-file-block-way

./: Cargo.toml  README.md
src/: main.rs
