[package]
name = "read-file-block-way"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
custom_debug_derive = "0.5.0"
failure = "0.1.8"
hex-slice = "0.1.4"
num_enum = "0.5.7"
positioned-io = "0.2.2"
